--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
-title: Welcome to Flexton
-description: Flexton is a responsive and ultra-minimal theme for Jekyll.
+title: Defenders of Wildlife - Group 1
+description: Creating a Better User Experience
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://bdubon.github.io/flexton/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
-author-name:    Clayton Hanson
+author-name:    DoF - Group 1
 author-image:   1.jpg
-author-job:     Web Developer
+author-job:     Group 1
 author-email:   your-email@domain.com # Add your email for contant form.
 author-twitter: artemsheludko_ # Add your twitter account
 about-author:   I am a web developer focusing on front-end development. Always hungry to keep learning.
 
 # Social settings
-social-twitter:   artemsheludko_
-social-facebook:
-social-github:    artemsheludko
-social-pinterest: artemsheludko
-social-instagram: artemsheludko_
-social-youtube:
+social-twitter: defenders 
+social-facebook: defendersofwildlife
+social-github:    
+social-pinterest: 
+social-instagram: defendersofwildlife
+social-youtube: defendersofwildlife
 social-vk:   
 social-linkedin:
 
@@ -28,7 +28,7 @@ mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.
 google-analytics: # Add your identifier. For example UA-99631805-1
 
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: DoF - Group 1 # Add your shortname for Disqus Comment. For example mr-brown
 
 # Build settings
 markdown: kramdown
