--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://bdubon.github.io/flexton/" # the base hostname & protocol for your
 
 # Author
 author-name:    Group One
-author-image:   1.jpg
+author-image:   1.JPG
 author-job:     InfoSci Students
 author-email:   your-email@domain.com # Add your email for contant form.
 author-twitter: defendersofwildlife # Add your twitter account
