--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Defenders of Wildlife - Group 1
 description: Creating a Better User Experience
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "bdubon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://bdubon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
 author-name:    Group One
@@ -20,12 +20,6 @@ social-instagram: defendersofwildlife
 social-youtube: defendersofwildlife
 social-vk:   
 social-linkedin:
-
-# Newsletter
-mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
-
-# Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1
 
 # Comment Section (Disqus)
 disqus-identifier: DoW # Add your shortname for Disqus Comment. For example mr-brown
