changed user image

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "http://bdubon.github.io/DoW/" # the base hostname & protocol for your site
 
 # Author
 author-name:    Group One
-author-image:   1.JPG
+author-image:   wolf.jpg
 author-job:     InfoSci Students
 author-email:   your-email@domain.com # Add your email for contant form.
 author-twitter: defendersofwildlife # Add your twitter account
