--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://bdubon.github.io/DoW/" # the base hostname & protocol for your site
 author-name:    Group One
 author-image:   wolf.jpg
 author-job:     InfoSci Students
-author-email:   your-email@domain.com # Add your email for contant form.
+author-email:   bdubon@umd.edu # Add your email for contant form.
 author-twitter: defendersofwildlife # Add your twitter account
 about-author:   Creating a Better User Experience.
 
