--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Defenders of Wildlife - Group 1
 description: Creating a Better User Experience
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.projectdow.tk" # the base hostname & protocol for your site, e.g. http://example.com
+url: "projectdow.tk" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
 author-name:    Group One
