--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,12 @@ social-youtube: defendersofwildlife
 social-vk:   
 social-linkedin:
 
+# Newsletter
+mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
+
+# Google Analytics
+google-analytics: # Add your identifier. For example UA-99631805-1
+
 # Comment Section (Disqus)
 disqus-identifier: G1-DoW # Add your shortname for Disqus Comment. For example mr-brown
 
