--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,7 @@ author-image:   wolf.jpg
 author-job:     Defenders of Wildlife
 author-email:   bdubon@terpmail.umd.edu # Add your email for contant form.
 author-twitter: defendersofwildlife # Add your twitter account
-about-author:   Creating a Better User Experience. ;r3kv m3;vc;lmv;lmr;3mgf4c
-tf3;mv;m3;vtm4;4m;5gnv  vln4l5v.,r vlnvilrknfdlnlsk vfljf lven grvl rv 3gv;l3
-glvn rvl3 rv3nrvl3/nrvl  rlvn3rnvw/nllk rlkvelkmrfv/
-vlkrvlk 3rvlk  rl3n/t p3'4mtpk3v lk;3 vl3 rv3
-v
-33 vl vln 3vlntglk3ntgl3t3'lknvlrn v lrvnl3ng3l v[Read More...]({% post_url 2018-09-25-Contextual-Analysis %})
+about-author:   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Blandit aliquam etiam erat velit scelerisque. Purus semper eget duis at tellus at urna. Donec et odio pellentesque diam. Quis hendrerit dolor magna eget est lorem ipsum dolor. Nunc pulvinar sapien et ligula ullamcorper. Ullamcorper dignissim cras tincidunt lobortis feugiat. Sed arcu non odio euismod lacinia. Sed cras ornare arcu dui vivamus arcu felis bibendum ut.
 
 # Social settings
 social-twitter: defenders 
