Added Read More

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author-image:   wolf.jpg
 author-job:     Defenders of Wildlife
 author-email:   bdubon@terpmail.umd.edu # Add your email for contant form.
 author-twitter: defendersofwildlife # Add your twitter account
-about-author: Our client, Defenders of Wildlife, uses the Center for Conservation Innovation (CCI) as a hub to share data relating the Endangered Species Act (ESA) with researchers and decision makers. Our goal is to improve the site's navigation to provide a better experience finding the content hosted on the site.
+about-author: Our client, Defenders of Wildlife, uses the Center for Conservation Innovation (CCI) as a hub to share data relating the Endangered Species Act (ESA) with researchers and policy makers. Our goal is to improve the site's navigation to provide a better experience finding the desired content by the users. <a href="http://www.projectdow.tk/2018/09/25/Contextual-Analysis/">Read More...</a>
 
 # Social settings
 social-twitter: defenders 
